<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="6dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/message_dfu_type"
        android:id="@+id/dfu_type"
        android:paddingBottom="32dp"/>

    <Button
        android:id="@+id/dfu_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_file_selector" />

    <Button
        android:id="@+id/dfu_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_version_input" />

</LinearLayout>