<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mbientlab.metawear.metabase.DiagnosticFragment">

    <TextView
        android:text="@string/title_diagnostic"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:id="@+id/streaming_text"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/scrollView">


        <LinearLayout
            android:id="@+id/metrics"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_update_firmware"
        android:textColor="@android:color/white"
        android:id="@+id/update_firmware"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:background="@android:color/holo_red_dark"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_run_diagnostic"
        android:textColor="@android:color/white"
        android:id="@+id/run_diagnostic"
        android:layout_gravity="center_horizontal"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:background="@android:color/holo_red_dark"/>
</LinearLayout>
